--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 lead">
+            <div class="col-md-6 col-md-offset-3 text-center lead">
               
 <!-- start slipsum code -->
 
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-4 lead"></div>
-            <div class="col-xs-12 col-md-4 lead">
+            <div class="col-xs-12 col-md-4 text-center lead">
               
           <!-- start slipsum code -->
 
