--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 text-center lead">
+            <div class="col-md-6 col-md-offset-3 text-xl-center text-lg-center text-md-center lead">
               
 <!-- start slipsum code -->
 
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-4 lead"></div>
-            <div class="col-xs-12 col-md-4 text-center lead">
+            <div class="col-xs-12 col-md-4 text-xl-center text-lg-center text-md-center lead">
               
           <!-- start slipsum code -->
 
@@ -93,7 +93,7 @@
                     <div><img src="assets/images/image1.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                        <div class="container">Do you see a little Asian child with a blank expression on his face ?</div>
+                        <div class="container">Do you see a little Asian child with a blank expression on his face?</div>
                     </figcaption>
 
                 </figure>
